Fixing some code smells